# schemack

./: README.md
analyzer/: CHANGELOG.md  hie.yaml  schemack-analyzer.cabal
analyzer/example/: company.schk  types.schk  user.schk
analyzer/src/Schemack/: Lexer.hs  Pretty.hs
