cabal-version:      2.4
name:               schemack-analyzer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lane
maintainer:         lanexpr@outlook.jp

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

tested-with:
    GHC == 9.2.8


common common-base
    ghc-options:      -Wall
    default-language: GHC2021

    build-depends:
        base ^>= 4.16.4.0,

    default-extensions:
        BlockArguments
        LambdaCase
        RecordWildCards

library
    import: common-base

    exposed-modules:
        Schemack.Lexer
        -- Schemack.Parser
        -- Schemack.Pretty

    build-depends:
        megaparsec ^>= 9.5.0,
        text ^>= 1.2.5,
        vector,
        containers,
        extra,
        lens,
        bimap

    hs-source-dirs: src

executable schemack-analyzer
    import: common-base

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        schemack-analyzer,
        text,
        pretty-show,

    hs-source-dirs:   app
    default-language: GHC2021
